<?xml version="1.0"?>
<package format="3">
  <name>robot_difer</name>
  <version>0.1.0</version>
  <description>Paquete ament_python que contiene el nodo base_driver para un robot diferencial. Publica odometría y la transformada odom-&gt;base_link, y permite enviar comandos PWM al controlador de motores.</description>
  <maintainer email="usuario@example.com">Usuario</maintainer>
  <license>MIT</license>

  <!-- Dependencias necesarias para construir este paquete -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
